Add font to theme

--- a/Badesaba/Resources/en.lproj/Localized.strings
+++ b/Badesaba/Resources/en.lproj/Localized.strings
@@ -5,4 +5,5 @@
   Created by Mahdiyar Oraei on 8/27/19.
   Copyright © 2019 Moj Hamrah. All rights reserved.
 */
-"Test" = "Test";
+"selectCity" = "Select city";
+"add" = "Add";
