--- a/Badesaba/Resources/fa.lproj/Localized.strings
+++ b/Badesaba/Resources/fa.lproj/Localized.strings
@@ -5,4 +5,5 @@
   Created by Mahdiyar Oraei on 8/27/19.
   Copyright © 2019 Moj Hamrah. All rights reserved.
 */
-"Test" = "تست";
+"selectCity" = "انتخاب شهر";
+"add" = "افزودن";
